css/styles.css
html,
body {
  margin: 0;
  padding: 0;
  width: 100%;
  min-height: 100vh;
  background-color: #f1f6fd;
  color: #232323;
  font-family: "Inter", sans-serif;
  font-optical-sizing: auto;
  font-style: normal;
}

// Fix spacing issues on message section
.msg p {
  margin-top: 0;
}

p {
  margin-top: 0;
}

/* Navbar Styling */
.navbar {
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  padding-top: 10px;
  padding-bottom: 10px;
  background-color: white;
}

.title {
  position: static;
  margin-left: 10px;
  color: #55acee;
}

.tweeter-logo {
  margin-right: 0;
}

.tweeter-img {
  width: 50px;
  height: 50px;
  border-radius: 40px;
}

/* Main Content  */
main {
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 40px;
}

.main-box {
  width: 90%;
  background-color: white;
  border-radius: 10px;
  padding: 15px 30px;
}

.input-section {
  display: flex;
  gap: 15px;
  height: 100px;
}

#input-tweet {
  font-family: "Inter", sans-serif;
  font-optical-sizing: auto;
  font-style: normal;
  height: 80%;
}

.profile-pic {
  width: 40px;
  height: 40px;
  background-color: #dedede;
  border-radius: 40px;
  flex-shrink: 0;
  align-self: flex-start;
}

.tweet-section {
  width: 100%;
}
#tweet-label {
  font-size: 10px;
  color: red;
  margin-bottom: 10px;
}

#input-tweet {
  border: none;
  outline: none;
  resize: none;
  background: transparent;
  padding: 0;
  margin: 0;
  overflow: auto; /* Keeps text scrollable if needed */
  -webkit-box-shadow: none;
  -moz-box-shadow: none;
  box-shadow: none;
  width: 100%;
}

/* Submit and remaining character display section  */

.submit-section {
  display: flex;
  justify-content: end;
  gap: 15px;
  margin-bottom: 20px;
  align-items: center;
}

.remaining-char-msg {
  margin: 0;
}

.tweet-btn {
  border-radius: 50px;
  padding: 1px 20px;
  height: 32px;
  line-height: 32px;
  background-color: #5fbcff;
  color: white;
  border: none;
  transition: background-color 0.3s ease;
}

.disabledBtn {
  background-color: gray;
  hover: none;
}

.btn-hover:hover {
  background-color: #51a3dd;
  cursor: pointer;
}

hr {
  border: none;
  height: 1px;
  background-color: #dbdbdb;
}

/* Message Section  */

.message-section {
  display: flex;
  gap: 15px;
}

.msg {
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.msg-info {
  color: gray;
}

.msg-name {
  color: black;
}

/* Tweeter Tools  */

.tweeter-tools {
  list-style-type: none;
  display: flex;
  justify-content: space-around;
  margin-top: 40px;
}

/* Tablet - 768px and up */
@media (min-width: 768px) {
  .main-box {
    width: 60%;
  }

  .tweeter-logo {
    margin-right: 200px;
  }

  .title {
    position: absolute;
  }
}

/* Desktop - 1024px and up  */
@media (min-width: 1024px) {
  .main-box {
    width: 35%;
  }

  .tweeter-logo {
    margin-right: 200px;
  }
}

